feat(members): 특수 클래스 승인 변경 API를 추가
