# backend/src/main/java/com/horse/members/presentation/dto/MemberRidingPermissionUpdateRequest.java
@@ -1,0 +1,7 @@
+package com.horse.members.presentation.dto;
+
+public record MemberRidingPermissionUpdateRequest(
+	boolean dressageApproved,
+	boolean jumpingApproved
+) {
+}
